--- a/wavedata/package.json
+++ b/wavedata/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.6",
     "@polkadot/api-contract": "^12.4.2",
     "@polkadot/extension-dapp": "^0.44.6",
+    "@solana/web3.js": "^1.95.3",
     "airtable": "^0.12.2",
     "assert": "^2.0.0",
     "axios": "^0.26.1",
@@ -45,6 +46,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.0",
     "recharts": "^2.1.9",
+    "solana-bankrun": "^0.3.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
